Current orientation not taken in account when using "Align to transform orientation" #76935

Closed
opened 2020-05-21 10:24:47 +02:00 by Pasang Bomjan · 4 comments

Blender Version
Broken: version: 2.82, 2.83 and 2.90 (sub 2), branch: master, commit date: 2020-05-19 22:32, hash: 4f622c9a08
Worked: 2.79
Short description of error
When using "Align to transform orientation", the current transform orientation is not used. We have to set it manually.
I haven't checked 2.80 and 2.81.

2.79 shows the current orientation and aligns accordingly.
2.79.png
2.82 and 2.83 show "Global" but align correctly.
2.82 and 2.83.png
2.90 shows "view" in the option, and trying to set to custom orientation crashes it. See #76933.
2.9.png

The behavior of 2.79 is the expected one

**Blender Version** Broken: version: 2.82, 2.83 and 2.90 (sub 2), branch: master, commit date: 2020-05-19 22:32, hash: `4f622c9a08` Worked: 2.79 **Short description of error** When using "Align to transform orientation", the current transform orientation is not used. We have to set it manually. I haven't checked 2.80 and 2.81. 2.79 shows the current orientation and aligns accordingly. ![2.79.png](https://archive.blender.org/developer/F8546102/2.79.png) 2.82 and 2.83 show "Global" but align correctly. ![2.82 and 2.83.png](https://archive.blender.org/developer/F8546104/2.82_and_2.83.png) 2.90 shows "view" in the option, and trying to set to custom orientation crashes it. See #76933. ![2.9.png](https://archive.blender.org/developer/F8546106/2.9.png) **The behavior of 2.79 is the expected one**
Author

Added subscriber: @Pasang

Added subscriber: @Pasang

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by a39ca327bc

This issue was referenced by a39ca327bc8491129d9794d136b39a6ba8cd6ffa

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-05-21 16:01:44 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76935
No description provided.