Fix T76935: Current orientation not taken in account when using "Align to transform orientation"