source/blender/editors/transform/transform_generics.c
@@ -1660,8 +1660,15 @@ void initTransInfo(bContext *C, TransInfo *t, wmOperator *op, const wmEvent *eve
       orient_type_scene += index_custom;
     }
 
-    short orient_type_default = V3D_ORIENT_VIEW;
+    short orient_type_default;
     short orient_type_constraint[2];
+    if ((t->flag & T_MODAL) && transform_mode_is_changeable(t->mode)) {
+      /* During modal, rotation starts with the View orientation. */
+      orient_type_default = V3D_ORIENT_VIEW;
+    }
+    else {
+      orient_type_default = orient_type_scene;
+    }
 
     if (op && (prop = RNA_struct_find_property(op->ptr, "orient_axis"))) {
       t->orient_axis = RNA_property_enum_get(op->ptr, prop);
